config rest interface

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -28,6 +28,12 @@
       .table td {
         text-align: center;   
       }
+      .enabled {
+        visibility: visible;   
+      }
+      .disabled {
+        visibility: hidden;   
+      }
     </style>
     <link href="./css/bootstrap-responsive.min.css" rel="stylesheet">
 
