mqtt username and password setting from browser

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -18,6 +18,7 @@
     <style>
       body {
         padding-top: 60px;
+        padding-bottom: 20px;
       }
       select {
         width: 80%;
